--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,5 @@ spring:
   jpa:
     show-sql: true # ????? ??? ??? ??? ??
     database: mysql
+openweathermap:
+  key: 371705b1d38c6b127e2080b5dc869432
