--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
   jpa:
     show-sql: true # ????? ??? ??? ??? ??
     database: mysql
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher # ???-???mvc ?? ??
 openweathermap:
   key: 371705b1d38c6b127e2080b5dc869432
 logging:
